--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -50,7 +50,7 @@
       crossorigin="anonymous"
     />
     <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
-    <title>Now UI Kit PRO React by Creative Tim</title>
+    <title> RAG </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
